Output list of selected filters on archive pages on mobile view, hide on desktop. Fixed CTA block links. Added filter button mixin

--- a/content/themes/igcp/inc/scss/components/_filters.scss
+++ b/content/themes/igcp/inc/scss/components/_filters.scss
@@ -49,7 +49,7 @@ h3.flt-Filters_Title {
 }
 
 .flt-Filters_Toggle {
-  @include button_primary;
+  @include button_filter;
   width: 100%;
   display: flex;
   align-items: center;
